# guisdap

./: .gitattributes  .gitignore  .version  CMakeLists.txt  README  guisdap-a.bat  guisdap.bat  guisdap.m  libinstall.sh  windows-start.m  windows_start.m
anal/: ACF.m  Ap.m  Barker.m  Contents.m  EISCAT_hdf5.m  EISCAT_hdf5_year.m  EISCAThdf5_FromOldExpr.m  EISCAThdf5_generate_year.m  EISCAThdf5_genrate_year.m  GUIDITOR.m  GUISPERT.m  GUIZARD.m  NCAR_output.m  NW2.m  TheSuperMasterFcn.m  Vm2Vg.m  addNote2Hdf5.m  addr_covar.m  adgr_covar.m  adgr_var.m  alt_decoder.m  an_start.m  anacont.m  analyse.m  auto_parse.m  beam_intersect.m  bitwiseor.m  calc_vcsignal.m  calib_ne.m  calib_pl_ne.m  canon.m  cedar2hdf5.m  cedar2hdf5_vel.m  cedarvel2hdf5.m  cerfexp.m  chapman.m  chk_lagprofiling.m  chk_par1.m  chk_par2.m  clear_results.m  (+162 more)
doc/: howto.html
doc/release_notes/: gup165.html  gup180.html  gup81.html  gup83.html  gup84.html  gup85.html  gup87.html  gup88.html  gup90.html
exps/CP4B/: CP4B.desc  CP4B.gdef  CP4BV.elan  CP4BV.tlan  CP4BVinit.mat  ana_def.m  guispert.m
exps/ampte/: adjust_dataR.m  adjust_dataT.m  ampteR_7.elan  ampteR_7.tlan  ampteR_7_LP.m  ampteR_7_specpar.m  ampteR_7init.mat  ampteR_7pat_PS.m  ampteR_7pat_PS.mat  ampteT_7.elan  ampteT_7.tlan  ampteT_7_LP.m  ampteT_7init.mat  ampteT_7pat_PS.m  ampteT_7pat_PS.mat  ampteT_7vcinit.m  ana_def.m
exps/arc/: ana_def.m  arcRGUPvar.mat  arcR_LP.m  arcR_analyse.m  arcR_init.m  arcRinit.mat  arcRlpg_i.tex  arcRpat_PS.mat  arcTGUPvar.mat  arcT_LP.m  arcTinit.mat  arcTlpg_i.tex  arcTpat_PS.mat  code64_128_reshape.txt  guispert.m  t2ps.m  t_to_ps.txt.R  t_to_ps.txt.T
exps/arc1/: ana_def.m  arc1LGUPvar.mat  arc1L_LP.m  arc1Linit.mat  arc1Llpg_i.tex  arc1Lpat_PS.mat  arc1Lvcinit.m  arc1RGUPvar.mat  arc1R_LP.m  arc1Rinit.mat  arc1Rlpg_i.tex  arc1Rpat_PS.mat  arc1Rvcinit.m  arc1TGUPvar.mat  arc1T_2_LP.m  arc1T_2init.mat  arc1T_2pat_PS.mat  arc1T_2vcinit.m  arc1T_LP.m  arc1Tinit.mat  arc1Tlpg_i.tex  arc1Tpat_PS.mat  arc1Tvcinit.m  b125d60.fir  b83d90.fir  guiditor.m  guispert.m  t2ps.m  t_to_ps.txt.L  t_to_ps.txt.R  t_to_ps.txt.T  t_to_ps.txt_2.T  w83d60.fir  zerolagfix.m
exps/arcd/: ana_def.m  arcdTinit.mat  arcdTlpg_i.tex  arcdVGUPvar.mat  arcdV_LP.m  arcdV_specpar.m  arcdVinit.mat  arcdVpat_PS.mat  arcdVvcinit.m  b250d30.fir  guispert.m  t2ps.m  t_to_ps.txt.V
exps/beata/: ana_def.m  b1230d4.fir  b14d375.fir  beataL_1init.mat  beataL_1pat_PS.mat  beataL_LP.m  beataLinit.mat  beataLvcinit.m  beataP_2_LP.m  beataP_2pat_PS.mat  beataP_2vcinit.m  beataP_LP.m  beataPpat_PS.mat  beataPvcinit.m  beataR_1pat_PS.mat  beataR_2_LP.m  beataR_2_init.m  beataR_2init.mat  beataR_2pat_PS.mat  beataR_LP.m  beataRinit.mat  beataRvcinit.m  beataT_2+1iinit.mat  beataT_2.3init.mat  beataT_2.3pat_PS.mat  beataT_2_LP.m  beataT_2_init.m  beataT_2_specpar.m  beataT_2init.mat  beataT_2pat_PS.mat  beataT_2vcinit.m  beataT_3_LP.m  beataT_3init.mat  beataT_LP.m  beataTinit.mat  beataTpat_PS.mat  beataV_0init.mat  beataV_0pat_PS.mat  beataV_1pat_PS.mat  beataV_3_LP.m  (+18 more)
exps/bella/: ana_def.m  b11d675.fir  b25d225.fir  b700d9.fir  bellaP_LP.m  bellaP_init.m  bellaPinit.mat  bellaPpat_PS.mat  bellaR_2_LP.m  bellaR_2_init.m  bellaR_2_specpar.m  bellaR_2init.mat  bellaR_2pat_PS.mat  bellaR_LP.m  bellaR_specpar.m  bellaRinit.mat  bellaRpat_PS.mat  bellaRvcinit.m  bellaT_LP.m  bellaTinit.mat  bellaTpat_PS.mat  bellaV_LP.m  bellaVinit.mat  bellaVpat_PS.mat  bellaVvcinit.m  guiditor.m  guispert.m  guizard.m  pl_def.m  t2ps.m  t_to_ps.txt.r  t_to_ps.txt.t  t_to_ps.txt.v  t_to_ps.txt_2.r
exps/cp0e/: cp0eT.elan  cp0eT.tlan  cp0eT_LP.m  cp0eTinit.mat  cp0eTpat_PS.m  cp0eTpat_PS.mat
exps/cp0g/: cp0gT.elan  cp0gT.tlan  cp0gT_LP.m~  cp0gTinit.mat  cp0gTpat_PS.m  cp0gTpat_PS.mat
exps/cp0h/: cp-0-h-t.elan  cp-0-h-t.tlan  cp0hT_LP.m  cp0hTinit.mat  cp0hTpat_PS.m  cp0hTpat_PS.mat
exps/cp1c/: cp1c.desc  cp1cT.elan  (+5 more)
init/: ACF.m  Aenv.m  Apenv.m  Barker.m  CIC91_fir_comp_coeff.m  CORR_alter.m  CORR_box.m  CORR_lp.m  CORR_mp.m  CORR_pp.m  CORR_remote.m  CORR_trilp.m  CORR_uprog.m  COR_alter.m  COR_arclp.m  COR_box.m  COR_caltemp.m  COR_check.m  COR_end.m  COR_fdalt.m  COR_frac.m  COR_fraclp.m  COR_init.m  COR_lp.m  COR_mp.m  COR_pp.m  COR_pulsetopulse.m  COR_remfraclp.m  COR_status.m  COR_trilp.m  COR_uprog.m  Contents.m  Copyright_Notice  DS_choose.m  DS_go.m  DS_set.m  DS_start.m  REC_impresp.m  REC_sampling.m  Walsh_index.m  (+68 more)
lpgen/: README.txt  lp.py  setup.py  sy32ac.py
m165ESR/: GUISPERT.m  integr_NW.m
m165KST/: PS_EMPTY.m  PS_PHA.m  PS_PHAN.m  PS_SETADCINT.m  PS_SETFREQ.m  filetrailer.m  integr_NW.m  integrate.m  subr_backgr.m
macros/: GUP_PiCmacros.tex  GUP_docinit.tex  GUPheader.tex  WrPiCmacros.ps  listinginit.tex  lpg.tex  tdPiCmacros.ps  tdPiCmacros.tex
makedeb/: PKGBUILD.guisdap  PKGBUILD.libguisdap
matfiles/: Guisdap_Parameters.xlsx  integdefs  lambda_haslam408_nofilt.fits  logo.mat  pldfv.mat  pldfvv.mat  q_metadata.mat  summer1996.mat
mexsources/: GULIPS.h  GULIPS_addm_worker.c  GULIPS_invR_worker.c  GULIPS_mul_worker.c  Makefile  addr_covar.c  addr_covar_worker.c  alt_decoder.c  alt_decoder.txt  clutter.c  dirthe.c  dirthe_worker.c  geomag.F  guisdap.h  iri.F  mrqmndiag.c  mrqmndiag_worker.c  msis.F  plwin.c  plwin.h  plwin.txt  spec.c  spec_worker.c  transf.c  transf_worker.c
models/irbem/source/: CMakeLists.txt  sph2car.f
models/iri2020/: CMakeLists.txt  igrf.f  irifun.f  irisub.f  iritec.for  rocdrift.for
models_m/: CODATA2006.m  OEIS.m  geomag.m  iri.m  msis.m
pygup/: add_tsky_main.py  addtsky.py  haslamskymap.py  skymapcal.py  syisrc.py
source/: CMakeLists.txt  GULIPS.h  GULIPS_addm_worker.c  GULIPS_cov_worker.c  GULIPS_invR_worker.c  GULIPS_mul_worker.c  Makefile  addr_covar.c  addr_covar_worker.c  alt_decoder.c  alt_decoder.txt  clutter.c  clutter.txt  dirthe.c  dirthe_worker.c  geomag.F  guisdap.h  iri.F  iri.h  libgup.h  mrqmndiag_worker.c  msis.h  plwin.c  plwin.h  plwin.txt  spec.c  spec_worker.c
tlan2ps/: Makefile  PS_BUFILT.m  PS_CALON.m  PS_LIFILT.m  PS_MATCHFIL.m  PS_ON.m  PS_REP.m  etlan.c  etlan.h  tlan2ps.c
(+1370 files in other folders)
