cmake_minimum_required(VERSION 3.5)
set(CMAKE_C_COMPILER gcc-5)
set(CMAKE_Fortran_COMPILER gfortran-5)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(SHARE_DIRECTORY ${CMAKE_BINARY_DIR}/share)
add_compile_options(-O4 -m64)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
#set(SHARE_DIRECTORY ${CMAKE_BINARY_DIR}/../share)
#add_compile_options(-O4 -march=native)
enable_language(Fortran)
string(APPEND CMAKE_Fortran_FLAGS " -fno-automatic -fno-align-commons")

project(guisdap)

add_subdirectory(models/iri2016)
add_subdirectory(models/nrlmsise00)
add_subdirectory(models/irbem-code/source)
add_subdirectory(models/irbem-code)
add_subdirectory(source)
