cmake_minimum_required(VERSION 3.10)
foreach(cver 9 10 11 12 13 14)
	find_program(gcc_EXECUTABLE gcc-${cver})
	if(gcc_EXECUTABLE)
		set(CMAKE_C_COMPILER gcc-${cver})
		set(CMAKE_Fortran_COMPILER gfortran-${cver})
		break()
	endif()
	set(CMAKE_C_COMPILER gcc)
	set(CMAKE_Fortran_COMPILER gfortran)
endforeach()
project(guisdap)
enable_language(Fortran)
set(PKG "$ENV{PKG}")
if(PKG)
 add_compile_options(-O4 -cpp -ffast-math -m64)
else()
 add_compile_options(-O4 -cpp -ffast-math -march=native)
endif()
string(APPEND CMAKE_Fortran_FLAGS " -fno-automatic -fno-align-commons -std=legacy")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(SHARE_DIRECTORY ${CMAKE_BINARY_DIR}/share)

add_subdirectory(models/iri2020)
add_subdirectory(models/nrlmsis2.1)
add_subdirectory(models/irbem/source)
add_subdirectory(models/irbem)
add_subdirectory(source)
